--- a/Frontend/src/styles/global.css
+++ b/Frontend/src/styles/global.css
@@ -12,3 +12,9 @@ html, body {
 body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
+
+button {
+  outline: none;
+  border: none;
+  background-color: transparent;
+}
