--- a/Frontend/src/styles/modular-classes.css
+++ b/Frontend/src/styles/modular-classes.css
@@ -2,10 +2,15 @@
   background: none;
   color: inherit;
   border: none;
-  padding: 0;
+  padding: 0; padding-left: 0.2rem; padding-right: 0.2rem;
   font: inherit;
   cursor: pointer;
   outline: inherit;
+}
+.--unstyled-btn:focus {
+  border-radius: 0.2rem;
+  outline: 2px solid rgba(0, 0, 0, 0.719);
+  outline-offset: 0.1rem;
 }
 
 .--collapsed-element {
