--- a/Frontend/src/routes/mockAnInterview/prepSession/prep-session-classes.css
+++ b/Frontend/src/routes/mockAnInterview/prepSession/prep-session-classes.css
@@ -1,5 +1,5 @@
 .prep-session__section {
-  margin-top: 1.3rem;
+  margin-top: 1rem;
   padding-bottom: 0.8rem;
 
   width: 100%;
@@ -10,8 +10,23 @@
   box-shadow: 0px 4px 5px -5px rgba(0, 0, 255, .2);
 }
 
-.prep-section__header {
-  /* margin-top: 1rem; */
+/* 
+.prep-section__header {} 
+*/
+
+.prep-section__inner-container--working {
+  display:flex; flex-direction:column; 
+  align-items: center; justify-content: space-around;
+  gap: 3rem;
+  
+  margin-top: 1rem; margin-bottom: 2rem;
+  padding-top: 2.5%; padding-bottom: 10%;
+  padding-left: 2.5%; padding-right: 2.5%;
+
+  width: var(--content-width); min-height: var(--content-height);
+}
+.prep-section__inner-container--done {
+  margin-top: 1rem; margin-bottom:2rem;
 }
 
 .--collapsed-icon {
@@ -21,7 +36,6 @@
 .text-area-input {
   border-radius: 0.3rem;
   padding: 0.5rem;
-  /* margin-top: 3rem; */
   text-wrap: wrap;
   width: 100%; min-height: 6rem;
   resize: vertical;
@@ -29,5 +43,4 @@
 
 .save-btn {
   padding: 0.3rem 0.4rem;
-  /* margin-top: 1rem; */
 }
